# aw-openclaw-connect

./: .gitignore  README.md  SKILL.md  Skill.md  Untitled  aw-connect.config.json  aw-openclaw-connect.code-workspace  log_viewer.html  pyproject.toml  skillref.md
aw_client/: __init__.py  agent_reporting.py  bucket_registry.py  cli.py  config.py  event_loader.py  github_sync.py  intervals.py  models.py  query_service.py  reporting.py  rest_client.py
aw_client/defaults/: aw-connect.config.json
aw_openclaw_connect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: query_demo.py
scripts/: export_last_4h_cleaned_log.py  repair_github_sync_records.py
