[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aw-openclaw-connect"
version = "0.1.1"
description = "Local ActivityWatch querying and agent-friendly export CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
aw-connect = "aw_client.cli:main"

[tool.setuptools.packages.find]
include = ["aw_client*"]

[tool.setuptools.package-data]
aw_client = ["defaults/*.json"]
